// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AudioRecorder > does not render recording preview if paused 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio-recorder__recording-playback"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-playback-button"
        data-testid="audio-recording-preview-toggle-play-btn"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--play-fill"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.75 10C18.7505 10.2122 18.6961 10.4209 18.5921 10.6059C18.488 10.7908 18.3379 10.9457 18.1562 11.0555L6.9 17.9414C6.71022 18.0576 6.49287 18.1211 6.27037 18.1252C6.04788 18.1293 5.82832 18.0739 5.63438 17.9648C5.44227 17.8574 5.28225 17.7008 5.17075 17.511C5.05926 17.3213 5.00032 17.1052 5 16.8852V3.11484C5.00032 2.89475 5.05926 2.67872 5.17075 2.48896C5.28225 2.2992 5.44227 2.14257 5.63438 2.03516C5.82832 1.92605 6.04788 1.87071 6.27037 1.87483C6.49287 1.87895 6.71022 1.94239 6.9 2.05859L18.1562 8.94453C18.3379 9.05428 18.488 9.20916 18.5921 9.39411C18.6961 9.57906 18.7505 9.78779 18.75 10Z"
            />
          </svg>
        </div>
      </button>
      <div
        class="str-chat__duration-display str-chat__recording-timer"
      >
        <span
          class="str-chat__duration-display__duration"
        >
          00:44
        </span>
      </div>
      <div
        class="str-chat__wave-progress-bar__track-container"
      >
        <div
          class="str-chat__wave-progress-bar__track"
          data-testid="wave-progress-bar-track"
          role="progressbar"
          style="--str-chat__voice-recording-amplitude-bar-gap-width: 1px;"
        >
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 31.399506330490112%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 24.018539488315582%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 18.365363776683807%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 59.02017951011658%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 26.63217782974243%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.37155795097351%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 82.78987407684326%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 15.16059935092926%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 47.57987558841705%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.29274868965149%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 55.40405511856079%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 85.32787561416626%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 57.56412744522095%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 83.30334424972534%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 75.42996406555176%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 46.48399353027344%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 77.82987952232361%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.917882204055786%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 71.56173586845398%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 7.107513397932053%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.29901123046875%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.445610344409943%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 95.34039497375488%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 48.61070513725281%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.09651231765747%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 8.803673088550568%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 49.2523193359375%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 3.940269351005554%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 77.68490314483643%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 18.697471916675568%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 4.977691546082497%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 5.717025697231293%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 4.073379561305046%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.73514586687088%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 94.67474222183228%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 54.55475449562073%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 81.71653747558594%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 61.83612942695618%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 81.5593957901001%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 89.80446457862854%;"
          />
          <div
            class="str-chat__wave-progress-bar__progress-indicator"
            data-testid="wave-progress-bar-progress-indicator"
            style="inset-inline-start: 0px;"
          />
        </div>
      </div>
    </div>
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__cancel-button"
        data-testid="cancel-recording-audio-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--delete"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.875 4.375H3.125M8.125 8.125V13.125M11.875 8.125V13.125M15.625 4.375V16.25C15.625 16.4158 15.5592 16.5747 15.4419 16.6919C15.3247 16.8092 15.1658 16.875 15 16.875H5C4.83424 16.875 4.67527 16.8092 4.55806 16.6919C4.44085 16.5747 4.375 16.4158 4.375 16.25V4.375M13.125 4.375V3.125C13.125 2.79348 12.9933 2.47554 12.7589 2.24112C12.5245 2.0067 12.2065 1.875 11.875 1.875H8.125C7.79348 1.875 7.47554 2.0067 7.24112 2.24112C7.0067 2.47554 6.875 2.79348 6.875 3.125V4.375"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--voice"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 15.625V18.75M10 15.625C11.4918 15.625 12.9226 15.0324 13.9775 13.9775C15.0324 12.9226 15.625 11.4918 15.625 10M10 15.625C8.50816 15.625 7.07742 15.0324 6.02252 13.9775C4.96763 12.9226 4.375 11.4918 4.375 10M10 1.875C11.7259 1.875 13.125 3.27411 13.125 5V10C13.125 11.7259 11.7259 13.125 10 13.125C8.27411 13.125 6.875 11.7259 6.875 10V5C6.875 3.27411 8.27411 1.875 10 1.875Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder > does not render recording preview if recording 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio-recorder__recording-preview"
    >
      <svg
        class="str-chat__icon str-chat__icon--voice"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 15.625V18.75M10 15.625C11.4918 15.625 12.9226 15.0324 13.9775 13.9775C15.0324 12.9226 15.625 11.4918 15.625 10M10 15.625C8.50816 15.625 7.07742 15.0324 6.02252 13.9775C4.96763 12.9226 4.375 11.4918 4.375 10M10 1.875C11.7259 1.875 13.125 3.27411 13.125 5V10C13.125 11.7259 11.7259 13.125 10 13.125C8.27411 13.125 6.875 11.7259 6.875 10V5C6.875 3.27411 8.27411 1.875 10 1.875Z"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
      <div
        class="str-chat__recording-timer"
      >
        00:00
      </div>
      <div
        class="str-chat__waveform-box-container"
      >
        <div
          class="str-chat__wave-progress-bar__track"
        />
      </div>
    </div>
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--pause-fill"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.875 3.75V16.25C16.875 16.5815 16.7433 16.8995 16.5089 17.1339C16.2745 17.3683 15.9565 17.5 15.625 17.5H12.5C12.1685 17.5 11.8505 17.3683 11.6161 17.1339C11.3817 16.8995 11.25 16.5815 11.25 16.25V3.75C11.25 3.41848 11.3817 3.10054 11.6161 2.86612C11.8505 2.6317 12.1685 2.5 12.5 2.5H15.625C15.9565 2.5 16.2745 2.6317 16.5089 2.86612C16.7433 3.10054 16.875 3.41848 16.875 3.75ZM7.5 2.5H4.375C4.04348 2.5 3.72554 2.6317 3.49112 2.86612C3.2567 3.10054 3.125 3.41848 3.125 3.75V16.25C3.125 16.5815 3.2567 16.8995 3.49112 17.1339C3.72554 17.3683 4.04348 17.5 4.375 17.5H7.5C7.83152 17.5 8.14946 17.3683 8.38388 17.1339C8.6183 16.8995 8.75 16.5815 8.75 16.25V3.75C8.75 3.41848 8.6183 3.10054 8.38388 2.86612C8.14946 2.6317 7.83152 2.5 7.5 2.5Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder > renders audio recording in progress UI 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio-recorder__recording-preview"
    >
      <svg
        class="str-chat__icon str-chat__icon--voice"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 15.625V18.75M10 15.625C11.4918 15.625 12.9226 15.0324 13.9775 13.9775C15.0324 12.9226 15.625 11.4918 15.625 10M10 15.625C8.50816 15.625 7.07742 15.0324 6.02252 13.9775C4.96763 12.9226 4.375 11.4918 4.375 10M10 1.875C11.7259 1.875 13.125 3.27411 13.125 5V10C13.125 11.7259 11.7259 13.125 10 13.125C8.27411 13.125 6.875 11.7259 6.875 10V5C6.875 3.27411 8.27411 1.875 10 1.875Z"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
      <div
        class="str-chat__recording-timer"
      >
        00:00
      </div>
      <div
        class="str-chat__waveform-box-container"
      >
        <div
          class="str-chat__wave-progress-bar__track"
        />
      </div>
    </div>
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--pause-fill"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.875 3.75V16.25C16.875 16.5815 16.7433 16.8995 16.5089 17.1339C16.2745 17.3683 15.9565 17.5 15.625 17.5H12.5C12.1685 17.5 11.8505 17.3683 11.6161 17.1339C11.3817 16.8995 11.25 16.5815 11.25 16.25V3.75C11.25 3.41848 11.3817 3.10054 11.6161 2.86612C11.8505 2.6317 12.1685 2.5 12.5 2.5H15.625C15.9565 2.5 16.2745 2.6317 16.5089 2.86612C16.7433 3.10054 16.875 3.41848 16.875 3.75ZM7.5 2.5H4.375C4.04348 2.5 3.72554 2.6317 3.49112 2.86612C3.2567 3.10054 3.125 3.41848 3.125 3.75V16.25C3.125 16.5815 3.2567 16.8995 3.49112 17.1339C3.72554 17.3683 4.04348 17.5 4.375 17.5H7.5C7.83152 17.5 8.14946 17.3683 8.38388 17.1339C8.6183 16.8995 8.75 16.5815 8.75 16.25V3.75C8.75 3.41848 8.6183 3.10054 8.38388 2.86612C8.14946 2.6317 7.83152 2.5 7.5 2.5Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder > renders audio recording paused UI when paused 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__cancel-button"
        data-testid="cancel-recording-audio-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--delete"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.875 4.375H3.125M8.125 8.125V13.125M11.875 8.125V13.125M15.625 4.375V16.25C15.625 16.4158 15.5592 16.5747 15.4419 16.6919C15.3247 16.8092 15.1658 16.875 15 16.875H5C4.83424 16.875 4.67527 16.8092 4.55806 16.6919C4.44085 16.5747 4.375 16.4158 4.375 16.25V4.375M13.125 4.375V3.125C13.125 2.79348 12.9933 2.47554 12.7589 2.24112C12.5245 2.0067 12.2065 1.875 11.875 1.875H8.125C7.79348 1.875 7.47554 2.0067 7.24112 2.24112C7.0067 2.47554 6.875 2.79348 6.875 3.125V4.375"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--voice"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 15.625V18.75M10 15.625C11.4918 15.625 12.9226 15.0324 13.9775 13.9775C15.0324 12.9226 15.625 11.4918 15.625 10M10 15.625C8.50816 15.625 7.07742 15.0324 6.02252 13.9775C4.96763 12.9226 4.375 11.4918 4.375 10M10 1.875C11.7259 1.875 13.125 3.27411 13.125 5V10C13.125 11.7259 11.7259 13.125 10 13.125C8.27411 13.125 6.875 11.7259 6.875 10V5C6.875 3.27411 8.27411 1.875 10 1.875Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder > renders audio recording stopped UI when stopped without recording preview 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__cancel-button"
        data-testid="cancel-recording-audio-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--delete"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.875 4.375H3.125M8.125 8.125V13.125M11.875 8.125V13.125M15.625 4.375V16.25C15.625 16.4158 15.5592 16.5747 15.4419 16.6919C15.3247 16.8092 15.1658 16.875 15 16.875H5C4.83424 16.875 4.67527 16.8092 4.55806 16.6919C4.44085 16.5747 4.375 16.4158 4.375 16.25V4.375M13.125 4.375V3.125C13.125 2.79348 12.9933 2.47554 12.7589 2.24112C12.5245 2.0067 12.2065 1.875 11.875 1.875H8.125C7.79348 1.875 7.47554 2.0067 7.24112 2.24112C7.0067 2.47554 6.875 2.79348 6.875 3.125V4.375"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--voice"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 15.625V18.75M10 15.625C11.4918 15.625 12.9226 15.0324 13.9775 13.9775C15.0324 12.9226 15.625 11.4918 15.625 10M10 15.625C8.50816 15.625 7.07742 15.0324 6.02252 13.9775C4.96763 12.9226 4.375 11.4918 4.375 10M10 1.875C11.7259 1.875 13.125 3.27411 13.125 5V10C13.125 11.7259 11.7259 13.125 10 13.125C8.27411 13.125 6.875 11.7259 6.875 10V5C6.875 3.27411 8.27411 1.875 10 1.875Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder > renders audio recording stopped UI with recording preview 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio-recorder__recording-playback"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-playback-button"
        data-testid="audio-recording-preview-toggle-play-btn"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--play-fill"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.75 10C18.7505 10.2122 18.6961 10.4209 18.5921 10.6059C18.488 10.7908 18.3379 10.9457 18.1562 11.0555L6.9 17.9414C6.71022 18.0576 6.49287 18.1211 6.27037 18.1252C6.04788 18.1293 5.82832 18.0739 5.63438 17.9648C5.44227 17.8574 5.28225 17.7008 5.17075 17.511C5.05926 17.3213 5.00032 17.1052 5 16.8852V3.11484C5.00032 2.89475 5.05926 2.67872 5.17075 2.48896C5.28225 2.2992 5.44227 2.14257 5.63438 2.03516C5.82832 1.92605 6.04788 1.87071 6.27037 1.87483C6.49287 1.87895 6.71022 1.94239 6.9 2.05859L18.1562 8.94453C18.3379 9.05428 18.488 9.20916 18.5921 9.39411C18.6961 9.57906 18.7505 9.78779 18.75 10Z"
            />
          </svg>
        </div>
      </button>
      <div
        class="str-chat__duration-display str-chat__recording-timer"
      >
        <span
          class="str-chat__duration-display__duration"
        >
          00:44
        </span>
      </div>
      <div
        class="str-chat__wave-progress-bar__track-container"
      >
        <div
          class="str-chat__wave-progress-bar__track"
          data-testid="wave-progress-bar-track"
          role="progressbar"
          style="--str-chat__voice-recording-amplitude-bar-gap-width: 1px;"
        >
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 31.399506330490112%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 24.018539488315582%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 18.365363776683807%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 59.02017951011658%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 26.63217782974243%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.37155795097351%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 82.78987407684326%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 15.16059935092926%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 47.57987558841705%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.29274868965149%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 55.40405511856079%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 85.32787561416626%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 57.56412744522095%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 83.30334424972534%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 75.42996406555176%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 46.48399353027344%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 77.82987952232361%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.917882204055786%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 71.56173586845398%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 7.107513397932053%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.29901123046875%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.445610344409943%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 95.34039497375488%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 48.61070513725281%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.09651231765747%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 8.803673088550568%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 49.2523193359375%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 3.940269351005554%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 77.68490314483643%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 18.697471916675568%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 4.977691546082497%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 5.717025697231293%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 4.073379561305046%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.73514586687088%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 94.67474222183228%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 54.55475449562073%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 81.71653747558594%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 61.83612942695618%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 81.5593957901001%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 89.80446457862854%;"
          />
          <div
            class="str-chat__wave-progress-bar__progress-indicator"
            data-testid="wave-progress-bar-progress-indicator"
            style="inset-inline-start: 0px;"
          />
        </div>
      </div>
    </div>
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__cancel-button"
        data-testid="cancel-recording-audio-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--delete"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.875 4.375H3.125M8.125 8.125V13.125M11.875 8.125V13.125M15.625 4.375V16.25C15.625 16.4158 15.5592 16.5747 15.4419 16.6919C15.3247 16.8092 15.1658 16.875 15 16.875H5C4.83424 16.875 4.67527 16.8092 4.55806 16.6919C4.44085 16.5747 4.375 16.4158 4.375 16.25V4.375M13.125 4.375V3.125C13.125 2.79348 12.9933 2.47554 12.7589 2.24112C12.5245 2.0067 12.2065 1.875 11.875 1.875H8.125C7.79348 1.875 7.47554 2.0067 7.24112 2.24112C7.0067 2.47554 6.875 2.79348 6.875 3.125V4.375"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--voice"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 15.625V18.75M10 15.625C11.4918 15.625 12.9226 15.0324 13.9775 13.9775C15.0324 12.9226 15.625 11.4918 15.625 10M10 15.625C8.50816 15.625 7.07742 15.0324 6.02252 13.9775C4.96763 12.9226 4.375 11.4918 4.375 10M10 1.875C11.7259 1.875 13.125 3.27411 13.125 5V10C13.125 11.7259 11.7259 13.125 10 13.125C8.27411 13.125 6.875 11.7259 6.875 10V5C6.875 3.27411 8.27411 1.875 10 1.875Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;
